<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/learn"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_puzzle"
        android:icon="@drawable/puzzle"
        android:title="@string/title_puzzle" />

    <item
        android:id="@+id/navigation_findparts"
        android:icon="@drawable/findparts"
        android:title="@string/title_findparts" />

    <item
        android:id="@+id/navigation_qa"
        android:icon="@drawable/qa"
        android:title="@string/title_qa" />

</menu>
